style: Increase margin-right of applet icon to prevent overlap

--- a/web/src/components/ExpandedViewMode/EVMiddleColumn/TabContent/EvAttachments/AttachmentListItem.scss
+++ b/web/src/components/ExpandedViewMode/EVMiddleColumn/TabContent/EvAttachments/AttachmentListItem.scss
@@ -64,7 +64,7 @@
     }
   
     .asset-list-item-applet-icon {
-      margin-right: 0.5rem;
+      margin-right: 1.5rem;
       margin-left: 0.5rem;
       width: 1.5rem;
       height: 1.5rem;
